--- a/trunk/perldoc/ko/perl/5.10/perltoot.pod
+++ b/trunk/perldoc/ko/perl/5.10/perltoot.pod
@@ -2756,12 +2756,12 @@ pieces while you're in the method, but everyone else is out of luck.
 
 =end original
 
-この世で、誰も、実行されているメソッドの外側にいるものには、
-この隠されたデータに近付けることを許されていません。
-たぶん、ほとんどない。
-デバッガを使っているプログラムを通すステップを選び、そのメソッドにいる間、
-そのかけらを見つけることが I<できます>。
-ですが、他の全ての人には、運がありません。
+이 세계에서 누구도 실행되는 메소드의 바깥쪽에 있는 것에는, 
+이 감춰진 데이터에 다가가는 것을 허락하지 않습니다.
+아마 거의 없을 겁니다. 
+디버거를 사용하는 프로그램을 통해 스텝을 선택하고, 그 메소드에 있는 사이에, 
+그 조각을 I<볼 수 있습니다>.
+하지만, 다른 모든 사람들에게는, 운이 없죠.
 
 =begin original
 
@@ -2772,10 +2772,10 @@ of those camps.
 
 =end original
 
-もし、このことが Scheme なみなさんを興奮させなければ、何が
-興奮させるのかわかりません。
-このテクニックの、C++ や、Java や、他の脳死状態の静的な言語への翻訳が、
-このキャンプの熱狂的なファンのくだらない課題としては、残っていますが。
+만약, 이것이 Scheme같은 모든 사람을 흥분시키지 않으면, 무엇이 
+흥분시키는 가 모릅니다.
+이 테크닉의, C++ 이나 Java 나, 다른 뇌사상태의 정적인 언어로의 번역이 
+열광적인 팬의 쓸데없는 과제로써 남아있습니다. 
 
 =begin original
 
@@ -2786,10 +2786,10 @@ police and related puritans.
 
 =end original
 
-caller() 関数で、ちょっとした詮索を加えることが出来ますし、クロージャが
-それ自身のパッケージを呼ばない限り、動作を拒否させることも出来ます。
-このことは、まちがいなく、プログラミングポリスと、その親類の厳格な人の、
-ある種の潔癖な関心事を満足させるでしょう。
+caller() 함수로, 조금 제색을 추가할 수 있고, 클로져가 
+그 자신의 패키지를 부르지 않는 한, 동작을 거부할 수도 있습니다.
+이것은 틀림없이 프로그램폴리스와 그와 비슷한 엄격한 사람의 
+어떤 종류의 긴박한 관심사를 만족시킬겁니다. 
 
 =begin original
 
@@ -2800,14 +2800,14 @@ a sound bit of well-designed code.)
 
 =end original
 
-もしも、いつ、傲慢- プログラマの三大美徳 - が開始するのかを疑問に
-思っていたなら、ここに、傲慢があります。
-(もっとまじめにいうなら、傲慢は、ちょっとしたすばらしくよく設計された
-コードを書くことから生じる腕前の、プライドです)。
+만약 언젠가 교만 - 프로그래머의 삼대미덕 - 이 개시하는 것을 의문스럽게 
+생각했다면, 여기에 교만이 있습니다.
+(더욱 제대로 하면, 교만은 조금 괭장하고 잘 설계된 코드를 쓰는 것으로 
+태어나는 프라이드입니다).
 
 =head1 AUTOLOAD: Proxy Methods
 
-(AUTOLOAD: 代理メソッド)
+(AUTOLOAD: 프록시 메소드)
 
 =begin original
 
@@ -2818,11 +2818,10 @@ strategy is why it's called autoloading.
 
 =end original
 
-オートロードは、未定義のメソッドの呼び出しをインターセプトする方法です。
-オートロードルーチンは、オン・ザ・フライに、新しい関数 - ディスクから
-ロードされるか、たぶんevalされているもの - を作ることを選ぶかもしれません。
-このオン・ザ・フライに定義する作戦が、
-オートローディング(訳註：自動装填?)と呼ばれる理由です。
+오토로드는 정의되지 않은 메소드의 호출을 인터셉트하는 방법입니다.
+오토로드루틴은 온 더 플라이에 새로운 함수 - 디스크에서 
+로드되었는지, 아마 eval 되어 있는 - 를 만드는 것을 선택할지도 모릅니다.
+이 온 더 플라이에 정의한 작전이 오토 로딩이라고 불리는 이유입니다.
 
 =begin original
 
@@ -2833,11 +2832,11 @@ of autoloaded methods as "proxy" methods.
 
 =end original
 
-ですが、これはたった一つの可能なアプローチです。
-他のアプローチは、オートロードされたメソッドそれ自身に、直接、要求された
-サービスを提供させることです。
-この方法を使ったとき、オートロードされたメソッドを"代理"メソッドのように、
-考えるかもしれません。
+하지만, 이것은 단 하나의 가능한 어프로치입니다.
+다른 어프로치는 오토로드된 메소드를 그 자신에게 직접 요구한 
+서비스를 제공시키는 것입니다.
+이 방법을 사용했을 때, 오토로드된 메소드를 "프록시" 메소드처럼 
+생각할지도 모르겠습니다.
 
 =begin original
 
@@ -2853,17 +2852,17 @@ from the call stack.
 
 =end original
 
-Perlが特定のパッケージの未定義の関数を呼ぼうとし、その関数が
-定義されていない場合、同じパッケージにある AUTOLOAD と呼ばれる関数を
-探します。
-もし、AUTOLOAD があれば、元の関数が持っていたのと同じ引数で、それが
-呼ばれます。
-その関数の完全な正規の名前(訳註:パッケージ名で修飾された関数名)は、
-パッケージのグローバル変数 $AUTOLOAD に蓄えられます。
-いったん呼ばれると、関数は、好きなように何かをすることが出来ます。
-適当な名前で、新しい関数を定義すること、実際に装飾的な一種の、C<goto>を、
-それに対して正しく行うこと、コールスタックからそれ自身を消すことを、
-含みます(訳註：謎)。
+Perl 이 특정의 패키지의 정의되지 않은 함수를 호출하려고 하고, 이 함수가 
+정의되어 있지 않은 경우, 같은 패키지에 있는 AUTOLOAD 라고 불리는 함수를 
+찾습니다.
+만약 AUTOLOAD 가 있으면 원래의 함수가 가지고 있는 것과 같은 인수로, 그것이 
+호출됩니다.
+그 함수의 완전한 정규이름(패키지 이름으로 수식된 함수명)은 
+패키지ㅣ 글로벌 별수 $AUTOLOAD 에 더해집니다. 
+일단 호출되면, 함수는 좋을 대로 뭔가를 할 수 가 있습니다.
+적당한 이름으로, 새로운 함수를 정의하는 것, 실제로 장식적인 일종의, 
+C<goto> 를 그것에 대해 바르게 수행하는 것, 콜스택에서 그 자신을 삭제하는 것을
+포함하고 있습니다.
 
 =begin original
 
@@ -2878,20 +2877,19 @@ kind of object.
 
 =end original
 
-これはオブジェクトと何が関係しますか?
-結局、関数について話し続けているのであって、メソッドについてではありません。
-たぶん、メソッドは、単に特別な引数と、それが見つけれらる場所について、
-装飾的な記法を伴ったただの関数なので、オートローディングをメソッドとしても
-使うことが出来ます。
-Perl は、@ISA を通した再帰的な捜索に疲れ果てるまで、AUTOLOAD メソッドを
-探し始めません。
-どんな種類のオブジェクトに対する、未解決のメソッド呼び出しを
-トラップするために、UNIVERSAL::AUTOLOAD メソッドを定義する、
-プログラマがいることも知られています。
+이것은 오브젝트와 뭔가 관계가 있을까요?
+결국, 함수에 대해 계속 이야기하고 있지, 메소드에 대해서가 아니죠. 
+아마 메소드는 단순히 특별한 인수와 그것이 발견되는 장소에 대해
+장식적인 기법을 따른 단순한 함수이기에 오토로딩을 메소드로써 
+사용할 수가 있습니다.
+Perl 은, @ISA 를 통해서 재귀적인 구색에 피곤해질때까지, AUTOLOAD 메소드를 
+찾기시작하지 않습니다.
+어떤 종류의 오브젝트에 대해 미해결의 메소드호출을 트랩하기 위해서 
+UNIVERSAL::AUTOLOAD 메소드를 정의하는 프로그래머가 있는 것도 알려져 있습니다.
 
 =head2 Autoloaded Data Methods
 
-(オートロードされるデータメソッド)
+(오토로드된 데이터 메소드)
 
 =begin original
 
@@ -2905,14 +2903,12 @@ this.
 
 =end original
 
-最初に Person クラスと、それから、Employee クラスを見せた、はるか前に
-遡ったら、二重化されたコードについて、おそらく、少し疑いを
-持ち始めるでしょう。
-それぞれのメソッドは、仮想的にまったく同じに見えるハッシュのフィールドに
-アクセスしていました。
-このことは、偉大なプログラミングの美徳である、短気をくすぐります。
-ですが、このときに、不精を勝たせて、なにもしません。
-代理メソッドが、これを癒せます。
+You probably began to get a little suspicious about the duplicated 
+code way back earlier when we first showed you the Person class, and
+then later the Employee class.  Each method used to access the
+hash fields looked virtually identical.  This should have tickled 
+that great programming virtue, Impatience, but for the time,
+we let Laziness win out, and so did nothing.  Proxy methods can cure this. 
 
 =begin original
 
@@ -2926,17 +2922,16 @@ field we once used: as a marker that means "for internal use only".
 
 =end original
 
-新しいデータフィールドをが欲しいと思うたびに新しい関数を毎回書く代わりに、
-オートロードのメカニズムを使って、(実際に、偽の)メソッドをオン・ザ・フライに
-生み出します。
-妥当なメンバにアクセスしていることを証明するために、
-C<_permitted>("under-permitted" と発音します)フィールドでチェックします。
-このフィールドは、%fieldと呼ばれるレコードの中の許されたフィールドの、
-ファイルスコープのレキシカルな(C のファイル static のような)ハッシュ
-リファレンスです。
-なぜ、アンダースコアがあるのか?
-かつて使った、_CENSUS フィールドと同じ理由のためです：
-"内部的に使うためだけ"を意味するマークです。
+새로운 데이터 필드를 필요하다고 생각할 때마다 새로운 함수를 매번 쓰는 대신에
+오토로드의 매커니즘을 사용해서, (실제로는 거짓의)메소드를 온 더 플라이에 
+놓습니다. 
+적당한 멤버에 접근하는 것을 증명하기 위해 
+C<_permitted>("under-permitted" 이라고 발음) 필드에서 체크합니다. 
+이 필드는, %field 라고 불리는 레코드의 안의 허락된 필드의 
+파일 영역의 렉시컬한 (C 의 파일 static 같은) 해쉬 리퍼런스입니다.
+왜 언더바가 있는것일까요?
+이전에 사용한, _CENSUS 필드와 같은 이유이기 때문입니다: 
+"내부적으로만 사용하기 위한" 마크입니다. 
 
 =begin original
 
@@ -2945,8 +2940,8 @@ constructor will look like when taking this approach:
 
 =end original
 
-ここにある、モジュールの初期化コードとクラスのコンストラクタは、
-このアプローチを取る場合に見るようなものです：
+여기에 있는, 모듈의 초기화 코드와 클래스의 생성자는
+이 어프로치를 얻는 경우에 보이는 것입니다:
 
     package Person;
     use Carp;
@@ -2975,8 +2970,8 @@ where current we have C<undef> in the %fields hash.
 
 =end original
 
-もし、レコードに、デフォルトの値を持たせたいなら、現在の、%field ハッシュに
-C<undef> のあるところに、それらを埋めることが出来ます。
+만약, 레코드에 기본값을 가지게 하고 싶지 않다면, 현재 %field 해쉬에 
+C<undef> 가 있는 곳에 그것들을 넣을 수 있습니다.
 
 =begin original
 
@@ -2987,11 +2982,11 @@ you won't have a decent inheritance.
 
 =end original
 
-オブジェクト自身に、クラスデータのリファレンスを保存させたやりかたに
-気づいたでしょうか?
-直接に %fields を参照するメソッドを持つか、そのほか、礼儀正しい継承を持たない
-代わりに、オブジェクトを通してクラスデータにアクセスすることが
-重要であることを思いだしてください。
+오브젝트 자신에게 클래스데이터의 리퍼런스를 보존하기 위한 방법을 
+알아채셨나요?
+직접 %fields 를 참조하는 메소드를 가지는 가, 그외 예의 바른 계승을 
+가지지 않는 대신에 오브젝트를 통해서 클래스 데이터에 접근하는 것이 
+중요하다는 것을 생각해주세요.
 
 =begin original
 
@@ -3003,12 +2998,12 @@ a user directly.
 
 =end original
 
-けれども、本当の魔法は、代理メソッドにあります。
-代理メソッドは、Person クラス(また、Person のサブクラス)のオブジェクトに
-対する未定義のメソッドの全ての呼び出しを取り扱います。
-AUTOLOAD と呼ばれなければなりません。
-再び、これは全て大文字になります。
-ユーザが直接呼ぶのではなく、Perl 自身によって、暗に呼ばれるからです。
+하지만, 진짜 마법은 프록시 메소드에 있습니다.
+프록시 메소드는 Person 클래스(그리고 Person 서브클래스)의 오브젝트에 
+대한 정의되지 않은 메소드를 전부 호출하는 것을 취급합니다.
+AUTOLOAD 라고 불리지 않으면 안됩니다.
+다시금, 이것은 모든 대문자가 됩니다.
+유저가 직접 호출하지 않고, Perl 이 직접 부르기 때문입니다.
 
     sub AUTOLOAD {
 	my $self = shift;
@@ -3036,9 +3031,9 @@ is modify %fields.  No new functions need be written.
 
 =end original
 
-とっても素敵でしょ? 新しいデータフィールドを加えるときにしなければ
-ならないことは、%fields を変更することだけです。
-新しい関数を書く必要はありません。
+매우 대단하죠? 새로운 데이터필드를 추가할 때에 하지 않으면 
+안되는 것은 %fields 를 변경하는 것 뿐입니다.
+새로운 함수를 쓸 필요는 없습니다.
 
 =begin original
 
@@ -3049,14 +3044,14 @@ directly from an object method.
 
 =end original
 
-C<_parmitted>フィールドを、完全に、避けることが出来ましたが、どのように
-オブジェクトのクラスデータをリファレンスに蓄えるのかを実証したかったのです。
-ですので、オブジェクトメソッドから、直接に、クラスデータにアクセスする
-必要はありません。
+C<_parmitted> 필드를 완전히 피할 수가 있습니다만, 어떻게 
+오브젝트의 클래스 데이터를 리퍼런스에 넣는 가를 실제로 증명하고 
+싶었습니다. 그래서 오브젝트 메소드에서 직접 클래스 데이터에 접근할 
+필요는 없습니다.
 
 =head2 Inherited Autoloaded Data Methods
 
-(継承されるオートロードされるデータメソッド)
+(계승되고 오토로드된 데이터 메소드)
 
 =begin original
 
@@ -3065,10 +3060,10 @@ class similarly?  Yes, so long as we're careful enough.
 
 =end original
 
-しかし、継承ではどうなるのでしょう? Employeeクラスを同じように
-定義できるでしょうか?
-できます。
-十分に気をつける限りは。
+그러나 계승에서는 어떻게 될까요? Employee 클래스를 똑같이 
+정의할 수 있을까요? 
+물론 할 수 있습니다. 
+충분히 주의만 해준다면요.
 
 =begin original
 
@@ -3076,7 +3071,7 @@ Here's how to be careful:
 
 =end original
 
-気をつけ方です：
+주의하는 방법입니다:
 
     package Employee;
     use Person;
@@ -3108,13 +3103,12 @@ and it will all work out just fine.
 
 =end original
 
-これをしたら、Employee パッケージに、AUTOLOAD 関数を持つ必要はありません。
-というのは、継承を通して、Person のバージョンを把握し、全て、
-うまく動くからです。
+이것을 하면, Employee 패키지에 AUTOLOAD 함수를 가질 필요는 없습니다. 
+이것은 계승을 통해 Person 버젼을 파악하고 모두 잘 움직이니까요.
 
 =head1 Metaclassical Tools
 
-(メタクラスなツールたち)
+(메타클래스같은 툴)
 
 =begin original
 
@@ -3127,13 +3121,13 @@ as detailed above.
 
 =end original
 
-代理メソッドが、データメソッドを関数としてくどくどコーディングするよりも、
-より構造体風なクラスを作るのに、便利なアプローチを提供するといっても、
-まだ、好ましいものが少し残されています。
-第一には、代理メソッドを通してトラップさせるつもりのない、
-いんちきの呼び出しを取り扱う必要があることを意味します。
-上で詳細を述べたように、継承を扱う時に非常に慎重にならなければならないことも
-意味します。
+프록시 메소드가 데이터 메소드를 함수로써 매번 코딩하는 것 보다도, 
+보다 구조체같은 클래스르 만드는 것에 편리한 어프로치를 제공한다고 해도, 
+아직 좋아할 만한 것이 조금 남아 있습니다. 
+첫번째는 프록시 메소드를 통해서 트랩디킬 일 없는, 사기 호출을 
+취급할 필ㅛ가 있는 것을 의미합니다. 
+위에서 상세한 내용을 말했듯이 계승을 다룰 때에 꽤 신중하지 않으면 안된다는 
+것을 의미합니다.
 
 =begin original
 
@@ -3145,12 +3139,12 @@ found in the modules directory on CPAN.
 
 =end original
 
-Perlプログラマは、さまざまなクラス生成クラスを作ることで、
-これに対応しています。
-これらのメタクラスは他のクラスを作るクラスです。
-見るべき組は、Class::Struct と、Alias です。
-これらと、他の関連するメタクラスは、CPAN のモジュールディレクトリで
-見つけられます。
+Perl 프로그래머는 여러 클래스 생성 클래스를 만드는 것으로, 
+이것에 대응하고 있습니다.
+이 메타클래스들은 다른 클래스를 만드는 클래스입니다.
+봐야할 것은 Class::Struct 와 Alias 입니다. 
+이것들과 다른 관련이 있는 메타클래스는 CPAN 의 모듈 디렉토리에서 
+볼 수 있습니다.
 
 =head2 Class::Struct
 
@@ -3169,18 +3163,17 @@ The Class::Struct::struct() function alleviates this tedium.
 
 =end original
 
-その古いものの一つは、Class::Struct です。
- 実際、その構文とインターフェースは、perl5 が実際のものに固まるだいぶ前に、
-スケッチされました。
-Class::Struct は、特定の型のフィールドがあるようなオブジェクトを持つクラスを
-"宣言"する方法を提供します。
-それが呼ばれる関数は、驚くようなものではなく、struct() です。
-構造、またはレコードは、Perl では、基本の型ではないので、
-レコード風なオブジェクトを提供するクラスを作るたびに、new() メソッドと、
-それに加えて、別個に、レコードの各フィールドのために、
-データアクセスメソッドを定義しなければなりません。
-このプロセスに、すぐに飽きてしまうでしょう。
-Class::Struct::struct 関数はこの退屈なことを緩和します。
+옛날 것 중 하나가 Class::Struct 입니다. 
+실제 그 구문과 인터페이스는 Perl5 가 안정되기 이전에 기획되었습니다. 
+Class::Struct 는 특정의 형태의 필드가 있는 듯한 오브젝트를 가지는 클래스를
+"선언"하는 방법을 제공합니다.
+그것이 호출되는 함수는, 놀라지 않아도 될, struct() 입니다.
+구조, 혹은 레코드는 Perl 에서는 기본의 형태가 아니기에 
+레코드 풍의 오브젝트를 제공하는 클래스를 만들때에 new 메소드와 
+그것에 더해 별개로 레코드의 각 필드를 위해 
+데이터 접근 메소드를 정의하지 않으면 안됩니다.
+그 프로세스에 곧 질려버리겠죠?
+Class::Struct::struct 함수는 이 지겨운 것을 완화합니다.
 
 =begin original
 
@@ -3188,7 +3181,7 @@ Here's a simple example of using it:
 
 =end original
 
-これを使う簡単な例です：
+이것을 사용하는 간단한 예제입니다:
 
     use Class::Struct qw(struct);
     use Jobbie;  # user-defined; see below
@@ -3217,9 +3210,9 @@ that class's new() method.
 
 =end original
 
-struct の中で、型を宣言でき、それは基本的な Perl の型になるか、
-ユーザー定義の型(クラス)になります。
-ユーザー型は、そのクラスのnew()メソッドを呼ぶことによって、初期化されます。
+struct 의 안에서 형태를 선언할 수 있고, 그것은 기본적인 Perl 의 형태가 
+되든지, 유저정의 형태(클래스)가 됩니다. 
+유저형태는 그 클래스의 new()메소드를 호출하는 것에 의해 초기화됩니다.
 
 =begin original
 
@@ -3244,12 +3237,11 @@ act like structs in the C sense.
 
 =end original
 
-structの生成を使った実際の例があります。
-たとえば、gethostbyname() と、gethostbyaddr() を、C 構造体のような振る舞いを
-するオブジェクトを返すように、オーバライドしたいとしましょう。
-high-falutin' OO gunk は、気にしません。
-やりたいことは、これらのオブジェクトが C 感覚で、構造体のような振る舞いを
-することです。
+struct 의 생성을 사용한 실제의 예제가 있습니다.
+예를 들면 gethostbyname() 과 gethostbyaddr()을 C 구조체처럼 행동을 
+하는 오브젝트를 반환하도록 오버라이드 하고 싶다고 합시다.
+high-falutin' OO gunk 는 신경쓰지 않습니다.
+하고 싶은 것은 이 오브젝트들이 C 감각으로 구조체같은 행동을 하는 것입니다.
 
     use Socket;
     use Net::hostent;
@@ -3264,8 +3256,8 @@ The crux is going to be this call:
 
 =end original
 
-Class::Struct モジュールを使ってこれをする方法です。
-最重要ポイントは、この呼び出しです：
+Class::Struct 모듈을 사용해서 하는 방법입니다.
+제일 중요한 포인트는 이 호출입니다:
 
     struct 'Net::hostent' => [  	# note bracket
 	name       => '$',
@@ -3282,8 +3274,8 @@ It even creates a new() method for us.
 
 =end original
 
-この呼び出しは、上記の名前と型のオブジェクトメソッドを作ります。
-new() メソッドさえも作ります。
+이 호출은 위의 이름과 형태의 오브젝트 메소드를 만듭니다. 
+new() 메소드마저도 만듭니다.
 
 =begin original
 
@@ -3291,7 +3283,7 @@ We could also have implemented our object this way:
 
 =end original
 
-次の方法でも、オブジェクトを実装できましたが、しませんでした：
+다음 방법에서도, 오브젝트를 구성할수 있습니다만, 하지 않았습니다:
 
     struct 'Net::hostent' => {  	# note brace
 	name       => '$',
@@ -3311,12 +3303,12 @@ this time we'll opt for better speed and size over better flexibility.
 
 =end original
 
-こうすると、Class::Struct は、オブジェクト型を、無名配列の代わりに、
-無名ハッシュを使います。
-配列は、ハッシュより速く、小さいですが、ハッシュは、継承をしたいときに、
-よく働きます。
-この構造体風なオブジェクには、継承を考えていないので、今回は、
-よりよいスピードと、サイズに余裕をもたせることにしました。
+이렇게 하면, Class::struct 는, 오브젝트 형태를 이름없는 배열 대신에 
+이름없는 해쉬를 사용합니다.
+배열은 해쉬보다 빠르고, 작지만, 해쉬는 계승을 하고 싶은 때에 
+좋습니다.
+이 구조체풍의 오브젝트에는 계승을 생각하지 않았기 때문에 
+이번에는 보다 빠른 스피트와 크기에 여유ㄹ 가지도록 했습니다.
 
 =begin original
 
@@ -3324,7 +3316,7 @@ Here's the whole implementation:
 
 =end original
 
-実装は次のようになります：
+구성은 다음과 같습니다:
 
     package Net::hostent;
     use strict;
@@ -3348,7 +3340,7 @@ Here's the whole implementation:
 
 =end original
 
-    # Class::Struct は、@ISA を使うのを禁止します
+    # Class::Struct 은 @ISA 를 사용하는 것을 금지합니다. 
     sub import { goto &Exporter::import }
 
     use Class::Struct qw(struct);
@@ -3406,13 +3398,11 @@ we can also use them in an object module.
 
 =end original
 
-動的なクラスの作成に加えて、コアな関数のオーバーライドや、
-import/export の例や、関数のプロトタイピングや、C<&whatever> を通しての
-関数のショートカット呼び出しや、C<goto &whatever> での
-関数の置き換えなどの他のコンセプトの正しい具体例を忍び込ませています。
-これらの全ては、大半が、伝統的なモジュールの観点から意味のあるものです。
-ですが、お分かりのように、オブジェクトモジュールとして、それらを使うことも
-出来ます。
+동적인 클래스의 작성에 더해서 코어한 함수의 오버라이드나, 
+import/export 측이나 함수의 프로토타이핑이나 C<&whatever> 를 통한 
+함수의 치환등의 다른 컨셉의 바른 구체적인 예제를 포함하고 있습니다. 
+이 모든것들은 대부분이 전통적인 모듈의 시점에서 의미 있는 것입니다. 
+하지만 알고 있듯이 오브젝트 모듈로써 그것들을 사용할 수도 있습니다.
 
 =begin original
 
@@ -3426,18 +3416,18 @@ They also have the type names that a C programmer would most expect.
 
 =end original
 
-他の、オブジェクトベースのものや、File::stat、Net::hostent、Net::netent、
-Net::protoent、Net::servent、Time::gmtime、Time::localtime、User::grent,
-User::pwent で、Perl の5.004 リリースのコアな関数の構造体風な
-オーバーライドを見ることが出来ます。
-これらのモジュールは、コンパイラのプログラムのためにとってある、慣例によって、
-全て小文字の最終的な構成要素を持っています。
-これらが、コンパイルに影響し、組み込み関数を変更するからです。
-これらは、C のプログラマがよく期待する型名を持っています。
+다른 오브젝트 베이스의 모듈이나 File::sat, Net::hostent, Net::nenent,
+Net::Protoent, Net::servent, Time::gmtime, Time::localtime, User::grent,
+User::pwent 에서 Perl 의 5.004 릴리즈의 코어한 함수의 구조체같은 
+오버라이드를 볼 수가 있습니다.
+이 모듈들은 컴파일러 프로그램을 위해 있고, 관례에 의해 
+모두 소문자의 최종적인 구성요소를 가지고 있습니다.
+이것들인 컴파일에 영향을 주고, 내장함수를 변경하기 때문입니다.
+이것들은 C 프로그래머가 기대할 만한 형태이름을 가지고 있습니다.
 
 =head2 Data Members as Variables
 
-(変数としてのデータメンバ)
+(변수로써의 데이터 멤버)
 
 =begin original
 
@@ -3449,12 +3439,12 @@ outside the class cannot.
 
 =end original
 
-C++ オブジェクトをよく使うなら、メソッド内からオブジェクトのデータメンバを
-単純な変数のように得ることが出来るのになれているでしょう。
-Alias モジュールは、これを提供します。
-同時に、ちょっとだけよいのは、オブジェクトは呼ぶことが出来るけれど、
-クラスの外側のみんなは呼ぶことの出来ない、
-プライベートなメソッドのようなところです。
+C++ 오브젝트를 잘 사용하면, 메소드 안에서 오브젝트의 데이터멤버를 
+단순한 변수처럼 얻을 수 있는 것에 익숙해져 있을 겁니다.
+Alias 모듈은 이것을 제공합니다.
+동시에 조금 좋은 것은, 오브젝트는 호출할 수 있지만, 
+클래스의 바깥쪽의 모든것은 호출 할 수 없는 프라이베이트한 메소드같은 것입니다.
+
 
 =begin original
 
@@ -3464,10 +3454,9 @@ update value fields in the hash.  Convenient, eh?
 
 =end original
 
-Alias モジュールをつかって Person を作る例です。
-これらの魔術的なインスタンス変数を更新すると、自動的にハッシュの値の
-フィールドを更新します。
-便利でしょ?
+Alias 모듈을 사용해서 Person 을 만드는 예제입니다.
+이것들의 매지컬한 인스턴스 변수를 갱신하면, 자동적으로 해쉬의 값 필드를
+갱신합니다. 편리하죠?
 
     package Person;
 
@@ -3527,14 +3516,14 @@ as with any other local().
 
 =end original
 
-C<our> を宣言しなければならないのは、Alias がしているのが、
-フィールドと同じ名前のパッケージのグローバル変数をいじれるようにするからです。
-要するに、C<use strict> をしながら、グローバル変数を使うために、
-これらを、先に宣言しなければなりません。
-これらのパッケージの変数は、ちょうど、それらに、local() を使ったように、
-attr() 呼び出しを囲んでいるブロックにローカライズされています。
-しかし、このことは、ちょうど、他の local() のように、まだ、一時的な値で、
-グローバル変数をで考えていることを意味します。
+C<our> 를 선언하지 않으면 안되는 것은 Alias 가 하고 있는 것이, 
+필드와 같은 이름의 패키지의 글로벌 변수를 만질 수 있게 하기 때문입니다.
+즉, C<use strict> 를 하고, 글로벌 변수를 사용하기 위해, 
+이것들을 먼저 선언하지 ì으면 안됩니다.
+이 패키지 변수들은 마침 그것들에 local()을 사용했던 것처럼
+attr() 호출을 포함하고 있는 블록에 로컬라이즈되어 있습니다.
+그러나 이것은 마침 다른 local() 처럼 혹은 일시적인 값으로,
+글로벌 변수를 생각하고 있는 것을 의미합니다.
 
 =begin original
 
@@ -3543,16 +3532,15 @@ something like Class::Struct or Class::MethodMaker.
 
 =end original
 
-Alias と、CLass::Structや、Class::MethodMakerを
-混ぜてい使うと良いでしょう。
+Alias 와 Class::Strcut 나 Class::MethodMaker 를 섞어 쓰는 것도 좋습니다.
 
 =head1 NOTES
 
-(注意)
+(주의)
 
 =head2 Object Terminology
 
-(オブジェクト専門用語)
+(오브젝트 전문 용어)
 
 =begin original
 
@@ -3564,12 +3552,12 @@ get at the same concepts in Perl.
 
 =end original
 
-さまざまなオブジェクト指向文献で、たくさんの違った言葉がほんの少ししか
-違わない概念を表すのに使われているように思います。
-もし、あなたがまだオブジェクト指向プログラマではないなら、
-これらの、気まぐれな言葉に悩むことはありません。
-ですが、もし、すでに、オブジェクト指向プログラマなら、Perlで、同じ
-コンセプトをどのように表すのか知りたいでしょう。
+여러가지 오브젝트지향문헌에서 많은 다른 단어가 책에서 정말 조금만 
+다른 개념을 나타내는 것에 사용되고 있습니다.
+만약 당신이 아직 오브젝트 지향프로그래머가 아니면, 
+이것들의 오락가락하는 단어들에 고민할 일은 없습니다.
+하지만 이미 오브젝트지향 프로그래머라면 Perl 에서 같은 
+컨셉을 어떻게 나타내는 가 알고 싶을겁니다.
 
 =begin original
 
@@ -3581,13 +3569,11 @@ I<class data>, I<class attributes>, or I<static data members>.
 
 =end original
 
-例えば、オブジェクトをクラスのI<インスタンス>と呼ぶことや、それら
-インスタンスのオブジェクトメソッドを I<インスタンスメソッド> と呼ぶことは、
-一般的でしょう。
-オブジェクトごとに特有のデータフィールドはよく、I<インスタンスデータ> とか、
-I<オブジェクト属性>と呼ばれ、全てのクラスのメンバに共通のデータフィールドは
-I<クラスデータ> や、I<クラス属性 >や、I<静的データメンバ> と
-よく呼ばれるでしょう。
+예를들어, 오브젝트를 클래스의 I<인스턴스>를 부르는 것이나 그 인스턴스의 
+오브젝트 메소드들을 I<인스턴스 메소드>라고 부르는 것은 일반적입니다.
+오브젝트마다 특유의 데이터필드는 때로 I<인스턴스 데이터> 라든가, 
+I<클래스 데이터> 라든가 I<클래스 속성> 이나, I<정적 데이터 멤버> 라고
+불립니다.
 
 =begin original
 
@@ -3597,10 +3583,10 @@ I<subclass> describe the other related one.
 
 =end original
 
-また、I<基底クラス> や、I<一般クラス> や I<スーパークラス> など全てが、
-同じ考えで記述します。
-ですので、I<派生クラス> や I<特定クラス> や、
-I<サブクラス> は、他の関連するものを記述します。
+아직 I<기본 클래스> 나 I<일반 클래스> 나 <수퍼 클래스> 등이 
+같은 생각으로 기술했스비다.
+그래서 I<파생 클래스>난 I<특정 클래스> 나 I<서브 클래스> 는 
+다른 관련하는 것을 기술합니다.
 
 =begin original
 
@@ -3613,14 +3599,13 @@ object (one expecting a reference), or vice versa.
 
 =end original
 
-C++ プログラマには、I<静的メソッド> や I<仮想メソッド> がありますが、
-Perl プログラマには、I<クラスメソッド> と、
-I<オブジェクトメソッド> しかありません。
-メソッドが、クラス/オブジェクトメソッドとして使われるかどうかは、
-使いかたによるだけです。
-うっかりと、オブジェクト(リファレンスを期待するもの)で
-クラスメソッド(文字列の引数を期待するもの)を呼ぶことも出来ますし、
-その逆も出来ます。
+C++ 프로그래머에게는 I<정적 메소드> 나 I<가상 메소드>가 있습니다만, 
+Perl 프로그래머에게는 I<클래스 메소드>와, 
+I<오브젝트 메소드> 밖에 없습니다.
+메소드는 클래스/오브젝트 메소드로써 사용되는지 어떤지는 
+사용법에만 따릅니다.
+오브젝트(리퍼런스를 기대하는 것) 에서 클래스 메소드(문자열의 인수를 
+기대하는 것)를 부르는 것도 할 수 있고, 그 반대도 가능합니다.
 
 =begin original
 
@@ -3645,11 +3630,11 @@ notion, but not the former.
 
 =end original
 
-クラスは、それ自身、オブジェクトの何かですので、Perl のクラスは、
-"メタオブジェクトとしてのクラス"(または、I<オブジェクト工場> とも
-呼ばれます)哲学と、"型定義としてのクラス"(振る舞いを I<宣言> し、
-メカニズムを I<定義しない>)考えの両方を表すものとして見られます。
-C++ は、後者をサポートしますが、前者は、サポートしません。
+클래스는 그 자신, 오브젝트의 뭔가 이기에, Perl 의 클래스는 
+"메타오브젝트로써의 클래스"(또는, I<오브젝트 공장> 이라고도 
+불립니다) 철학과 "형태 정의로써의 클래스"(행동을 I<선언> 하고, 
+매커니즘을 I<정의하지 않은>) 생각의 양쪽을 나타내는 것으로 보입니다.
+C++ 은 후자를 지원하지만, 전자는 지원하지 않습니다.
 
 =head1 SEE ALSO
 
@@ -3667,8 +3652,7 @@ L<overload>.
 
 =end original
 
-以下のマニュアルページは、まちがいなく、このマニュアルページに多くの
-背景を与えてくれます:
+아래ㅣ 매뉴얼 페이지는 틀림없이 이 매뉴얼 페이지에 많은 배경을 제공합니다:
 L<perlmod>,
 L<perlref>,
 L<perlobj>,
@@ -3683,8 +3667,7 @@ programming.
 
 =end original
 
-L<perlboot> は、よりやさしい、オブジェクト指向プログラミングの
-イントロダクションです。
+L<perlboot> 는 보다 쉬운 오브젝트 지향 프로그래밍의 소개입니다.
 
 =begin original
 
@@ -3692,7 +3675,7 @@ L<perltooc> provides more detail on class data.
 
 =end original
 
-L<perltooc> はクラスデータに関する詳細を提供します。
+L<perltooc> 은 클래스 데이터에 관한 상세한 내용을 제공합니다.
 
 =begin original
 
@@ -3702,13 +3685,11 @@ Class::MethodMaker and Tie::SecureHash
 
 =end original
 
-以下のモジュールは関心をひくでしょう: Class::Accessor,
+아래의 모듈에 관심을 가져보세요: Class::Accessor,
 Class::Class, Class::Contract, Class::Data::Inheritable,
 Class::MethodMaker, Tie::SecureHash
 
 =head1 AUTHOR AND COPYRIGHT
-
-(著者および著作権)
 
 Copyright (c) 1997, 1998 Tom Christiansen 
 All rights reserved.
@@ -3724,11 +3705,7 @@ credit would be courteous but is not required.
 
 =head1 COPYRIGHT
 
-(著作権)
-
 =head2 Acknowledgments
-
-(謝辞)
 
 Thanks to
 Larry Wall,
