--- a/perldoc/ko/perl/5.10/perltoot.pod
+++ b/perldoc/ko/perl/5.10/perltoot.pod
@@ -3616,9 +3616,9 @@ functions can be.
 
 =end original
 
-C++ の観点からは、Perl の全てのメソッドは、仮想的です。
-ところで、このことは、メソッドが、普通の組み込み関数やユーザ定義関数が
-出来るような、引数リストで関数のプロトタイプを、チェックされない理由です。
+C++ 의 관점에서는 Perl 의 모든 메소드는 가상적입니다.
+그런데 이것은 메소드가 보통의 내장 함수나 유저정의 함수가 
+가능하도록 인수리스트에서 함수의 프로토타입을 체크하지 않는 이유입니다.
 
 =begin original
 
