--- a/perldoc/ko/perl/5.10/perltooc.pod
+++ b/perldoc/ko/perl/5.10/perltooc.pod
@@ -406,12 +406,12 @@ values to the specific, named class attribute.
 
 =end original
 
-クロージャ(L<perlref> 参照)を使って、パッケージのシンボルテーブル
-(L<perlmod> 参照)に直接にアクセスします。
-さて、%ClassData ハッシュの中のそれぞれのキーごとに、アクセサメソッドを
-クローニングします。
-これらのメソッドは、値を持ってくるか、特定の指定されたクラス属性に値を
-格納するために使われます。
+클로져(L<perlref> 참조)를 사용해서, 패키지의 심볼테이블(L<perlmod> 참조)에 
+직접 접근합니다.
+그럼 %ClassData 해쉬의 안에 각각의 키마다 접근자 메소드를 
+클로닝합니다.
+이 메소드들은 값을 가지고 오든가 특정 지정된 클래스 속성에 값을 
+넣기 위해 사용됩니다.
 
 =begin original
 
@@ -427,9 +427,9 @@ values to the specific, named class attribute.
 =end original
 
     for my $datum (keys %ClassData) {
-	no strict "refs";	# パッケージに新しいメソッドを登録するために
+	no strict "refs";	# 패키지에 새로운 메소드를 등록하기 위해
 	*$datum = sub {
-	    shift;	# XXX: クラス/オブジェクトの呼出を無視する
+	    shift;	# XXX: 클래스 오브젝트 호출을 무시합니다.
 	    $ClassData{$datum} = shift if @_;
 	    return $ClassData{$datum};
 	} 
@@ -446,13 +446,13 @@ and certainly in this one.
 
 =end original
 
-&AUTOLOADメソッドを用いる解決法も、うまくはいきますが、このアプローチを
-満足の行くものであると立証するのは、見込がありません。
-関数はクラス属性とオブジェクト属性の間を区別しなければなりません。
-継承に干渉します。
-また、DESTORY に注意する必要があります。
-このような複雑性は、ほとんどの場合でお呼びではありません。
-もちろん、この場合も。
+&AUTOLOAD 메소드를 사용하는 해결법도 잘 되지만, 이 어프로치를 
+만족하는 것이라고 입증하는 것은 어느 정도 될지 모르겠습니다.
+함수는 클래스 속성과 오브젝트 속성의 사이를 구별하지 않으면 안됩니다.
+속성에 간섭합니다.
+또, DESTROY 에 주의할 필요가 있습니다.
+이같은 복잡성은 대부분의 경우에서 호출되지 않습니다.
+물론 이 경우도 그렇습니다.
 
 =begin original
 
@@ -471,21 +471,21 @@ words, when you want to refer to the symbol table, use symbol references.
 
 =end original
 
-なぜ、strict refs をループで無効にしているのだろうと思うかも知れません。
-パッケージのシンボルテーブルを操作して、新しい関数名をシンボリック
-リファレンスを使って(間接的な命名で)導入しています。
-シンボリックリファレンスは、strict プラグマが禁じているものです。
-ふつうは、シンボリックリファレンスは、せいぜい危なっかしい考えです。
-ただ、意図しないときに、あやまって使われる可能性があるので、危なっかしいと
-いうだけです。
-初心者の Perl プログラマがシンボリックリファレンスを置こうとする、
-使いかたのほとんどには、ネストされたハッシュや配列のハッシュのような、
-より良いアプローチがあるからです。
-ですが、メソッド名やパッケージ変数のようなパッケージのシンボルテーブルの
-観点からのみ、意味があることを操作するのに、シンボリックリファレンスを
-使うのは、何も間違っていません。
-言い替えれば、シンボルテーブルを参照したい場合は、シンボリックリファレンスを
-使ってください。
+왜, strict refs 를 루프에서 무효화하고 있는 것일까 생각할지도 모르겠습니다.
+패키지의 심볼 테이블을 조작해서 새로운 함수이름을 심볼릭 리퍼런스를 사용해서
+(간접적인 명명에서) 도입하고 있습니다.
+심볼릭 리퍼런스는 strict 프라그마가 금지하고 있는 것입니다.
+보통은 심볼릭 리퍼런스는 꽤 위험한 생각입니다.
+단지 의도하지 않은 때에 잘못 사용될 가능성이 있기때문에 
+위험할지도 모른다는 것 뿐입니다.
+초심자의 Perl 프로그래머가 심볼릭리퍼런스를 두려고 하는,
+대부분의 사용법에는 중첩된 해쉬나 배열의 해쉬같은 
+보다 좋은 어프로치가 있기 때문입니다.
+하지만, 메소드이름이나 패키지 변수같은 패키지의 심볼릭 테이블의 
+관점에서만 의미가 있는 것을 조작하는 것에 심볼릭 리퍼런스를 
+사용하는 것은 전혀 틀리지 않습니다.
+바꿔 말하면 심볼릭 테이블을 참조하고 싶은 경우는, 심볼릭 리퍼런스를 
+사용해주세요.
 
 =begin original
 
@@ -498,17 +498,17 @@ one.  This issue is addressed below in L<"The Eponymous Meta-Object">.
 
 =end original
 
-一つの場所に、全てのクラス属性を集積するのは、さまざまな利点があります。
-クラス属性は、目に付きやすく、初期化しやすく、変更しやすい。
-集約することで、クラス属性を外部から、例えば、デバッガや永続的な
-パッケージから、アクセスするのが便利になります。
-唯一ありそうな問題は、それぞれのクラスが持っているはずの
-クラスオブジェクトの名前を自動的には知らないことです。
-この問題は、下の方の L<"The Eponymous Meta-Object"> に、扱われています。
+하나의 장소에 모든 클래스 속성을 집적하는 것은 여러 이점이 있습니다.
+클래스 속성은 눈에 띄기 쉽고, 초기화하기 쉽고, 바꾸기 쉽습니다.
+집약하는 것으로 클래스 속성을 바깥에서 예를 들면 디버거나 영속적인 
+패키지에서 접근하는 것이 편리합니다.
+유일하게 있을 듯한 문제는 각각의 클래스가 가지고 있을 클래스 오브젝트ㅣ 
+이름을 자동적으로 알지 않는 것입니다.
+이 문제는 아래의 L<"The Eponymous Meta-object"> 에서 다루고 있습니다.
 
 =head2 Inheritance Concerns
 
-(継承の懸念)
+(상속의 개념)
 
 =begin original
 
@@ -521,14 +521,14 @@ But what package are the class attributes stored in?
 
 =end original
 
-派生クラスのインスタンスがあったとして、継承されたメソッド呼び出しを使い、
-クラスデータにアクセスします。
-このとき、結局、基底クラスの属性を参照することになるべきなのか、
-派生クラスの属性を参照することになるべきでしょうか？
-さっきの例ではどのように動くでしょうか？
-派生クラスは基底クラスの全てのメソッドを継承します。
-クラス属性にアクセスするメソッドも含みます。
-ですが、どのパッケージにクラス属性が格納されるのでしょうか？
+파생 클래스의 인스턴스가 있음으로써 계속된 메소드 호출을 사용하고, 
+클래스 데이터에 접근합니다.
+이 때, 결국, 기본클래스의 속성을 참조해야 될까요
+파생 클래스의 속성을 참조해야되는 것일까요?
+앞의 예제에서는 어떻게 움직였을까요?
+파생 클래스는 기본 클래스의 모든 메소드를 계승합니다.
+클래스 속성은 접근하는 메소드도 포함합니다.
+하지만, 어 패키지에 클래스 속성이 넣어질 까요?
 
 =begin original
 
@@ -540,12 +540,11 @@ in the method cloning version, C<$Some_Class::ClassData{CData1}>.
 
 =end original
 
-答えは、書かれたように、クラス属性はそれらのメソッドがコンパイルされた
-パッケージに、格納されます。
-&CData1 メソッドを、派生クラスの名前か、派生クラスのオブジェクトで呼び出すと、
-上で示されたバージョンのものが動きます。
-つまり、$Some_Class::Cdata1 -- または、クローニングしているバージョンの
-メソッドで、C<$Some_Class::ClassData{CData1}>に、アクセスできます。
+답은 쓰여진대로 클래스 속성은 메소드들이 컴파일된 패키지에 넣어집니다.
+&CData1 메소드를 파생 클래스의 이름이나 파생 클래스의 오브젝트로 호출하면,
+위에 나타낸 버젼만이 움직입니다.
+즉, $Some_Class::Cdata1 -- 또는 클로닝하고 있는 버젼의 메소드에서 
+C<$Some_Class::ClassData{CData1}> 에 접근할 수 있습니다.
 
 =begin original
 
@@ -558,14 +557,14 @@ from Carnivores?  The current approach doesn't support that.
 
 =end original
 
-派生クラスのコンテキストではなく、
-基底クラスのコンテキストで実行するようなクラスメソッドを考えましょう。
-お望みのものにびったりなことがあります。
-猫は肉食動物の下位に分類されれば、新たに猫が生まれると、世界の肉食動物の
-固体数が増えます。
-ですが、肉食動物とは切り離して、何匹の猫がいるかを数えたいなら
-どうしましょう？
-現在のアプローチではそれには対応できません。
+파생클래스의 컨텍스트가 아닌, 
+기본 클래스의 컨텍스트에 실행하는 클래스 메소드를 생각해봅시다.
+원하는 것에 딱 맞는 것이 있습니다.
+고양이는 육식동물의 하위에 분류되어 있으면, 새로운 고양이가 태어나면, 
+세계의 육식동물의 개체수 늘어납니다.
+하지만, 육식동물이라는 것을 떼어버리면 몇 마리의 고양이가 있는 가를 
+세아리고 싶다면 어떻게 할까요?
+현재의 어프로치에서는 그것에는 대응할 수 없습니다.
 
 =begin original
 
@@ -579,13 +578,12 @@ class of that object.
 
 =end original
 
-クラス属性が package-relative であることに筋が通っているかどうかを、
-ケースバイケースの根拠で決める必要があるでしょう。
-package-relative でありたいなら、関数の第一引数を無視するのをやめます。
-第一引数は、メソッドがクラス名で直接に呼ばれたなら、パッケージ名、
-オブジェクトリファレンスで呼ばれたなら、オブジェクトリファレンスの、
-どちらかです。
-後者では、ref() 関数がオブジェクトのクラス名を与えます。
+클래스 속성이 package-relative 인 것에 상식적인지 어떤지를 
+케이스바이 케이스의 근거로 결정할 필요가 있을 겁니다.
+package-relative 로 있고 싶다면, 함수의 첫번째 변수를 무시하는 것을 
+그만둡니다. 첫번째 인수는 메소드가 클래스 이름으로 직접 호출되었다면, 
+패키지이름, 오브젝트리퍼런스에서 호출되었다면, 오브젝트리퍼런스 어느쪽입니다.
+후자에서는 ref() 함수가 오브젝트의 클래스이름을 줍니다.
 
     package Some_Class;
     sub CData1 {
@@ -605,9 +603,9 @@ instead of the compiling package as we had previously.
 
 =end original
 
-以前にしたようなコンパイルしているパッケージではなく、呼び出している
-パッケージのパッケージ変数としてアクセスしたいと思っている、
-他の全てのクラス属性(CData2 などのように)と同じようにしたいでしょう。
+앞에서 했던 대로 컴파일 하고 있는 패키지가 아닌 호출하고 있는 
+패키지의 패키지변수로써 접근하고 싶다고 생각하고, 
+다른 모둔 클래스 속성(CData2 같은)처럼 하고 싶겠죠?
 
 =begin original
 
@@ -620,14 +618,13 @@ for (well, somewhat).
 
 =end original
 
-ここで、再び、一時的に strict references を禁止するのをやめましょう。
-そうしないと、パッケージのグローバル変数のために、完全に適格なシンボル名を
-使うことが出来ないからです。
-このことは、完全に合理的です：全てのパッケージ変数は、定義により、
-パッケージに生きています。
-パッケージのシンボル名経由で、パッケージ変数に
-アクセスするのは何も間違っていません。
-そのためにそれがあるのです(たぶん)。
+여기에서 다시 일시적인 strict references 를 금지하는 것을 그만둡니다.
+그렇지 않으면, 패키지의 글로벌 변수를 위해 완전하게 적격인 심볼이름을 
+사용할 수가 없기 때문입니다.
+이 것은 완전하게 합리적입니다: 모든 패키지 변수는 정의에 따라 
+패키지에 살고 있습니다.
+패키지의 심볼이름 경유로 패키지 변수에 접근하는 것은 전혀 틀리지 않습니다.
+그 때문에 그것이 있기때문입니다(아마도).
 
 =begin original
 
@@ -637,11 +634,11 @@ closure used to produce new method entries for the class's symbol table.
 
 =end original
 
-全てのもののために、ただ一つのハッシュを使い、メソッドを複製しては
-どうでしょうか？
-どのように見えるでしょう？ 
-唯一の違いは、クラスのシンボルテーブルに新しいメソッドを生み出すのに、
-クロージャが使われていることです。
+모든 것을 위해 단 하나의 해쉬를 상요하고 메소드를 복제하는 것은 
+어떨까요?
+어떻게 보일까요?
+유일한 차이는 클래스의 심볼 테이블에 새로ㄴ 메소드를 생성하는 것에 
+클로져가 사용된다는 것입니다.
 
     no strict "refs";	
     *$datum = sub {
@@ -654,7 +651,7 @@ closure used to produce new method entries for the class's symbol table.
 
 =head2 The Eponymous Meta-Object
 
-(クラスの名前のメタオブジェクト)
+(클래스 이름의 메타오브젝트)
 
 =begin original
 
@@ -664,9 +661,9 @@ something else that might make more sense, be more useful, or both?
 
 =end original
 
-前の例の、%ClassDataハッシュは、変数名が創意に富んでも、直観的でもないと、
-主張されるかもしれません。
-もっと意味があるか、有益なものか、その両方を備えたものはないでしょうか？
+앞의 예제의 %ClassData 해쉬는 변수이름이 창의적이라도 직관적이지도 않다는
+말을 들을 수 있을지도 모르겠습니다.
+더욱 의미가 있는지 유익한 것인지 그 양쪽을 위한 것은 없을 까요?
 
 =begin original
 
@@ -682,18 +679,16 @@ does this, if you're looking for an example.)
 
 =end original
 
-はい、ちょうどよくあります。
-"クラスのメタオブジェクト"に、パッケージと同じ名前のパッケージ変数を
-使いましょう。
-Some_Class のパッケージ宣言のスコープ内で、クラスのメタオブジェクトとして、
-%Some_Class という、クラスの名前のハッシュを使いましょう。
-(クラスの名前のハッシュは、コンストラクタをクラスの名前にする、
-Python や、C++ 流儀のクラスをちょっと思い出させます。
-つまり、Some_Class クラスが &Some_Class::Some_Class をコンストラクタと
-するということです。
-おそらく、その名前を同様にエクスポートさえしているでしょう。
-例をお探しなら、I<The Perl Cookbook> の StrNum クラスは、そのように
-しています)。
+네, 마침 그런게 있습니다.
+"클래스의 메타오브젝트"에 패키지와 같은 이름의 패키지 변수를 사용합시다.
+Some_Class 의 패키지선언의 영역 안에서 클래스의 메타오브젝트로써
+%Some_Class이라는 클래스 이름의 해쉬를 사용합시.
+(클래스 이름의 해쉬는 생성자를 클래스의 이름으로 하논 Python 이나 
+C++ 같은 클래스를 조금 생각나게 합니다. 즉 Some_Class 클래스가 
+&Some_Class::Some_Class 를 생성자로 하는 것입니다.
+아마도 그 이름을 같은 모양으로 익스포트만 하고 있겠죠.
+예제를 찾고 있다면 I<The Perl Cookbook> 의 StrNum 클래스는 그렇게 
+하고 있습니다)
 
 =begin original
 
@@ -704,10 +699,10 @@ translucent attributes, discussed later.
 
 =end original
 
-このありきたりなアプローチには、多くの利益があります。
-よくわかる一意の名前を含むことで、デバッグや透過的な永続生やチェックポイントの
-助けになります。
-後で述べる、一価のクラスと半透明な属性にとっても、明らかな名前です。
+이 어프로치에는 많은 이점이 있습니다.
+잘 알고 있는 하나의 이름을 포함함으로써 디버그나 투과적인 영속성이나 
+채크포인트에 도움이 됩니다. 
+뒤에 기술할 하나의 클래스와 반투명한 속성에 대해서도 명확한 이름입니다.
 
 =begin original
 
@@ -717,10 +712,10 @@ used to implement the class.
 
 =end original
 
-下のものは、そのようなクラスの例です。
-メタオブジェクトを格納しているハッシュの名前が、どのようにして、
-クラスを実装するのに使われているパッケージの名前と同じに
-しているかに気を付けてください。
+아랫것은 그런 클래스의 예제입니다.
+메타오브젝트를 넣는 해쉬의 이름이 어떻게 해서 
+클래스를 구성하는 것에 사용되는 패키지의 이름처럼 
+하고 있는 가에 주의해주세요.
 
     package Some_Class;
     use strict;
@@ -735,7 +730,7 @@ used to implement the class.
 
 =end original
 
-    # 完全な名前を使ってクラスのメタオブジェクトを作る
+    # 완전한 이름을 사용해서 클래스의 메타오브젝트를 만듭니다.
     our %Some_Class = (   	# our() is new to perl5.6
 	CData1 => "",
 	CData2 => "",
@@ -754,7 +749,7 @@ used to implement the class.
 
 =end original
 
-    # このアクセサはcalling-package-relative
+    # 이 접근자는 calling-package-relative
     sub CData1 {
 	my $obclass = shift;	
 	my $class   = ref($obclass) || $obclass;
@@ -795,15 +790,15 @@ always put the __PACKAGE__ in a variable first.
 
 =end original
 
-2 番目のアクセサで、__PACKAGE__ 記法が、2つの理由から使われています。
-1 つ目の理由は、後で、名前を変えたくなった際に、コードにパッケージの名前を
-リテラルでハードコーディングするのは避けたいからです。
-2 つ目の理由は、コードを読む人に、ここで何が問題なのかをはっきり
-させるためです。
-ここでの問題は、現在コンパイルされているパッケージであり、
-オブジェクトかクラスを呼び出したパッケージではないということです。
-アルファベットでない文字列が長く続くのが面倒なら、
-常に、変数の最初に、__PACKAGE__ を置いてください。
+2번째의 접근자에서 __PACKAGE__ 기법이 2개의 이유로 사용되고 있습니다.
+첫번째 이유는 뒤에 이름을 바꾸고 싶을 때에, 코드에 패키지 이름을 
+리터럴로 하드 코딩하는 것을 피하고 싶기 때문입니다.
+2번째 이유는, 코드를 읽는 사람에게 여기에서 뭔가 문제인지를 제대로 
+하기 때문입니다.
+여기에서 문제는 현재 컴파일되어 있는 패키지이고, 
+오브젝트 클래스를 호출한 패키지에서는 없다는 것입니다.
+알파벳이 아닌 문자열이 길게 늘어진 것이 귀찮다면, 
+항상 변수의 처음에는 __PACKAGE__ 를 놓아주세요.
 
 =begin original
 
@@ -818,8 +813,8 @@ always put the __PACKAGE__ in a variable first.
 =end original
 
     sub CData2 {
-	shift;			# XXX: クラス/オブジェクトの呼び出しを無視し、
-	no strict "refs"; 	# クラスの名前のメタオブジェクトにアクセスします。
+	shift;			# XXX: 클래스/오브젝트 호출을 무시하고, 
+	no strict "refs"; 	# 클래스 이름의 메타오브젝트에 접근합니다.
 	my $class = __PACKAGE__;
 	$class->{CData2} = shift if @_;
 	return $class->{CData2};
@@ -840,20 +835,18 @@ class the object belongs to.
 
 =end original
 
-ずっとシンボリックリファレンスを使っていますが、悪くはありません。
-ずいぶん多くの場所で、strict ref のチェックを無効にしているのに、
-うろたえがちな人がいるでしょうけど。
-シンボリックリファレンスであれば、常に、本当のリファレンスを作れます
-(その逆は真ではありませんが)。
-このシンボリックリファレンスから本当のリファレンスへの変換をする
-サブルーチンを作りましょう。
-引数無しで呼ばれたら、コンパイルしているクラスの名前のハッシュへの
-リファレンスを返します。
-クラスメソッドとして呼ばれたら、その呼び出したクラスの名前のハッシュへの
-リファレンスを返します。
-オブジェクトメソッドとして呼ばれたら、この関数は、オブジェクトが
-属している、どんなクラスでも、クラスの名前のハッシュへの
-リファレンスを返します。
+계속 심볼릭 리퍼런스를 사용하고 있지만, 나쁘지는 않습니다.
+꽤 많은 장소에서 strict ref 의 체크를 무효로 하고 있는 것에 
+짜증날 사람이 있을지도 모르겠지만, 
+심볼릭 리퍼런스라면, 항상 제대로된 리퍼런스를 만들 수 있습니다
+(그 반대는 참이 아니지만). 
+이 심볼릭 리퍼런스에서 진짜 리퍼런스로의 변환을 하는 서브루틴을 만듭시다.
+인수무시하고 불려지면, 컴파일하고 있는 클래스의 이름의 해쉬로의 
+리퍼런스를 반환합니다.
+클래스 메소드로써 부려지면, 그 호출한 클래스의 이름의 해쉬로의 
+리퍼런스를 반환합니다.
+오브젝트 메소드로써 불려지면, 이 함수는 오브젝트가 
+속하고 있는 어떤 클래스에서도 클래스의 이름의 해쉬로의 리퍼런스를 반환합니다.
 
     package Some_Class;
     use strict;
@@ -879,7 +872,7 @@ class the object belongs to.
     sub _classobj {
 	my $obclass = shift || __PACKAGE__;
 	my $class   = ref($obclass) || $obclass;
-	no strict "refs";   # シンボリックリファレンスを本当のリファレンスへと変換する
+	no strict "refs";   # 심볼릭 리퍼런스를 진짜 리퍼런스로 변환한다 
 	return \%$class;
     } 
 
@@ -900,8 +893,8 @@ class the object belongs to.
 =end original
 
     for my $datum (keys %{ _classobj() } ) { 
-	# strict refs をオフにするので、
-	# シンボルテーブルにメソッドを登録できます。
+	# strict refs 를 껐기때문에 
+	# 심볼 테이블에 메소드를 등록할 수 있습니다. 
 	no strict "refs";    	
 	*$datum = sub {
 	    use strict "refs";
@@ -913,7 +906,7 @@ class the object belongs to.
 
 =head2 Indirect References to Class Data
 
-(間接的なクラスデータへのリファレンス)
+(간접적인 클래스 데이터로의 리퍼런스) 
 
 =begin original
 
@@ -925,12 +918,11 @@ haven't thought of before.
 
 =end original
 
-クラス属性を取り扱うの合理的で一般的な作戦とは、
-オブジェクトそれ自身で、それぞれのパッケージ変数へのリファレンスを
-格納することです。
-これは、おそらく既にみた作戦です。
-L<perltoot> や、L<perlbot> にあるようなものです。
-ですが、まだ考えたことのないようなバリエーションの例が下にあります。
+클래스 속성을 취급하는 합리적이고 일반적인 작전으로는 
+오브젝트 그 자신으로 각각의 패키지 변수의 리퍼런스를 넣는 것입니다.
+이것은 아마도 이미 본 작전입니다.
+L<perltoot> 나, L<perlbot> 에 있는 것입니다. 
+하지만 아직 생각한 적이 없는 베리에이션의 예제가 밑에 있습니다. 
 
     package Some_Class;
     our($CData1, $CData2);      	# our() is new to perl5.6
@@ -985,12 +977,11 @@ proper package's data.
 
 =end original
 
-上に書いたように、派生クラスが、これらのメソッドを継承します。
-これらのメソッドは基底クラスのパッケージのパッケージ変数に持続的に
-アクセスします。
-このことは、全ての状況で、必要とされ、期待された振る舞いではありません。
-変数、メタオブジェクトを使う例があります。
-適当なパッケージのデータへのアクセスを解決します。
+위에 쓰여진대로, 파생 클래스가 그 메소드들을 상속합니다.
+이 메소드들은 파생 클래스의 패키지의 패키지 변수에 지속적으로 접근합니다. 
+이 것은 모든 상황에서 필요하고, 기대된 행동이 아닙니다.
+변수, 메타오브젝트를 사용하는 예제가 있습니다.
+적당한 패키지의 데이터에 접근을 해결합니다.
 
 	package Some_Class;
 	use strict;
@@ -1058,13 +1049,11 @@ the method was initially compiled.
 
 =end original
 
-今、strict ref を取り除いているだけでなく、クラスの名前のメタオブジェクトを
-使って、コードクリーナーを作っているようです。
-前のバージョンとは違い、これは、継承に直面すると、ちょっと面白いことを
-します：
-これは、呼び出しているクラスの、クラスのメタオブジェクトにアクセスします。
-メソッドが最初にコンパイルされたクラスではありません。
- 
+지금, strict ref 를 빼고 있는 것 뿐아니라, 클래스의 이름의 메타오브젝트를
+사용해서, 코드크리너를 만들고 있는 것입니다. 
+앞의 버젼과는 달리 이것은 상속에 직면하면, 조금 재미있는 일을 합니다.
+이것은 호출하고 있는 클래스의 클래스 메타 오브젝트에 접근합니다.
+메소드가 맨처음에 컴파일된 클래스가 아닙니다.
 
 =begin original
 
@@ -1077,13 +1066,13 @@ is not always feasible, but it's certainly an appealing idea.)
 
 =end original
 
-クラスのメタオブジェクトのデータに簡単にアクセスすることが出来ます。
-デバッギングや、永続クラスを実装するときのような外部のメカニズムを使って、
-完全なクラスの状態を簡単にダンプできます。
-このように働くのは、クラスのメタオブジェクトがパッケージ変数であり、
-よく知られた名前を持ち、全てのそのデータを一緒にまとめているからです。
-(透過的な永続生は常に適しているわけではありませんが、魅力的なアイデアで
-あるのは確かです。)
+클래스의 메타오브젝트의 데이터에 간단하게 접근할 수 가 있습니다. 
+디버깅이나 영속 클래스를 구성하는 때처럼 외부의 매커니즘을 사용해서 
+완전한 클래스의 상태를 간단하게 덤프할 수 있습니다. 
+이렇게 행동하는 것은 클래스의 메타오브젝트가 패키지 변수이고, 
+잘 알려진 이름을 가지고, 모든 데이터를 함께 처리할 수 있기 때문입니다. 
+(투과적인 영속성은 항상 적합한 것은 아닙니다만, 매력적인 아이디어인 것은 
+분명합니다) 
 
 =begin original
 
@@ -1095,17 +1084,17 @@ innovative uses for this powerful feature.
 
 =end original
 
-まだ、オブジェクトのアクセサメソッドがクラスの名前で呼び出されていないことを
-チェックしていません。
-strict ref のチェックが有効なら、壊れます。
-そうでなければ、クラスの名前のメタオブジェクトを得ます。
-それを我慢するか、なんとかするかは、あなた次第です。
-次の 2 つのセクションで、この強力な特徴の画期的な利用法を、
-デモンストレーションします。
+아직, 오브젝트의 접근자 메소드가 클래스의 이름으로 호출되지 않는 것을 
+체크하고 있지 않습ㅣ다. 
+strict ref 의 체크가 유효하면 부서집니다.
+그렇지 않으면 클래스의 이름의 메타오브젝트를 얻습니다.
+그것을 놔둘 것인가 어떻게 하는 가는 만드는 사람에 달려 있습니다.
+다음의 2개의 섹션에서 이 강력한 특징의 획기적인 이용법을 
+시험하겠습니다. 
 
 =head2 Monadic Classes
 
-(一価のクラス)
+(단가의 클래스) 
 
 =begin original
 
