--- a/trunk/perldoc/ko/perl/5.10/perltooc.pod
+++ b/trunk/perldoc/ko/perl/5.10/perltooc.pod
@@ -1112,22 +1112,21 @@ contains no statefulness, so state data is wholly superfluous.
 
 =end original
 
-Perlに載っている標準モジュールには、何の属性メソッドも一切ない、
-クラスインターフェースを提供しているものがいくつかあります。
-もっとも普通に使われているモジュールは、プラグマを数にいれなければ、
-Exporter モジュールです。
-このモジュールは、コンストラクタも、属性もないクラスです。
-Exporter の仕事は、単純に、モジュールが呼び出しもとに自分の名前空間の一部を
-エクスポートする、
-標準のインターフェースを提供することです。
-モジュールは 、それぞれのモジュールの@ISA配列に継承のリストをセットすることで、
-Exporter の &import メソッドを使い、"Exporter" に記載します。
-ですが、クラスの Exporter には、コンストラクタがありません。
-そのため、複数のクラスのインスタンスを持つことが出来ません。
-実際に、一つももてません -- 全く意味をなさない。
-あなたが得る全てのものは、そのメソッドです、
-そのインターフェースには、なんの状態も含みません。
-ですので、状態のデータはまったく不要なのです。
+Perl 에 실려있는 표준모듈에는, 어떤 속성 메소드도 없고, 
+클래스 인스턴스를 제공하고 있는 것이 몇 가지 있습니다.
+제일 일반적으로 사용되는 모듈은, 프라그마를 숫자로 넣지 않으면 
+Exporter 모듈입니다. 
+이 모듈은 생성자도 속성도 없는 클래스입니다. 
+Exporter 의 일은 단순히 모듈이 호출되는 곳에 자신의 이름공간의 일부를 
+배출하고, 표준 인스턴스를 제공하는 것입니다. 
+모듈은 각각의 모듈의 @ISA 배열에 상속의 리스트를 정의하는 것으로,
+Exporter 의 &import 메소드를 사용하고, "Exporter" 에 기재합니다.
+하지만, 클래스의 Exporter 에는 생성자가 없습니다.
+그 때문에 복수의 클래스의 인스턴스를 가질 수가 없습니다.
+실제로, 한개도 가지고 있지 않습니다 -- 전혀 의미하지 않습니다.
+당신이 얻는 모든 것은 그 메소드입니다.
+그 인터페이스에는 어떤 상태도 포함되지 않습니다.
+그렇기에 상태의 데이터는 전혀 필요없습니다.
 
 =begin original
 
@@ -1137,11 +1136,11 @@ formally, I<singletons> or I<highlander classes>.
 
 =end original
 
-別の種類のクラスで、時間から時間までを取得するモジュールは、
-単一のインスタンスをサポートするものです。
-このようなクラスは I<一価のクラス> と呼ばれます。
-または、あまり正式ではありませんが、I<singletons> とか、
-I<highlander classes>と 呼ばれます。
+다른 종류의 클래스에서 시간에서 시간까지를 얻는 모듈은, 
+단일한 인터페이스를 지원하는 것입니다.
+이런 클래스는 I<monadic 클래스>라고 불립니다.
+또는 그다지 정식은 아니지만, I<singletons> 라든가, 
+I<highlander classes> 라고 불립니다.
 
 =begin original
 
@@ -1153,11 +1152,11 @@ example of a monadic class:
 
 =end original
 
-クラスが一価であれば、その状態、すなわち、属性をどこに格納するのでしょう。
-一つのインスタンスより他にはないと、どのように確認するでしょうか？
-たくさんのパッケージ変数を単に使うこともできますが、
-クラスの名前のハッシュを使うクリーナーを使うことも非常にあります。
-一価のクラスの完全な例です:
+클래스가 moandic 이라면 그 상태 즉, 속성을 어디에 넣는 것일까요?
+하나의 인터페이스에서 다른곳에는 없으면 어떻게 확인할 까요?
+많은 패키지 변수를 단순히 사용할 수도 있습니다만, 
+클래스의 이름의 해쉬를 사용하는 클리너를 사용하는 것도 꽤 있습니다.
+monadic class 의 완벽한 예제입니다:
 
     package Cosmos;
     %Cosmos = ();
@@ -1173,7 +1172,7 @@ example of a monadic class:
 
 =end original
 
-    # "name" 属性のアクセサメソッド
+    # "name" 속성의 접근자 메소드 
     sub name {
 	my $self = shift;
 	$self->{name} = shift if @_;
@@ -1191,7 +1190,7 @@ example of a monadic class:
 
 =end original
 
-    # "birthday" 属性の読み込みのみのアクセサメソッド
+    # "birthday" 속성의 readonly 접근자 메소드 
     sub birthday {
 	my $self = shift;
 	die "can't reset birthday" if @_;  # XXX: croak() is better
@@ -1209,7 +1208,7 @@ example of a monadic class:
 
 =end original
 
-    # "stars" 属性のアクセサメソッド
+    # "stars" 속성의 접근자 메소드 
     sub stars {
 	my $self = shift;
 	$self->{stars} = shift if @_;
@@ -1227,7 +1226,7 @@ example of a monadic class:
 
 =end original
 
-    # おや、まあ！ - 星が一つ、死んでしまった！
+    # 어라.. 별이 하나 죽어버렸다!
     sub supernova {
 	my $self = shift;
 	my $count = $self->stars();
@@ -1249,7 +1248,7 @@ example of a monadic class:
 
 =end original
 
-    # コンストラクタ/イニシャライザ - リブートで直される
+    # 생성자/이니셜라이저 - 리부트로 고쳐진다. 
     sub bigbang { 
 	my $self = shift;
 	%$self = (
@@ -1257,8 +1256,7 @@ example of a monadic class:
 	    birthday 	 => time(),
 	    stars 	 => 0,
 	);
-	return $self;	    # はい、おそらくクラスです。
-びっくり！
+	return $self;	    # 아마도 클래스 입니다. 
     }
 
 =begin original
@@ -1269,8 +1267,8 @@ example of a monadic class:
 
 =end original
 
-    # クラスがコンパイルされた後、ですが、use も require も戻る前、
-    # バンとともに、宇宙が動き始めます。
+    # 클래스가 컴파일된 후, 하지만 use 도 require 도 돌아가기 전 
+    # 빅뱅과 함께 우주가 움직이기 시작합니다.
     __PACKAGE__ -> bigbang();
 
 =begin original
@@ -1288,20 +1286,20 @@ package variable.
 
 =end original
 
-そのままでいてください。
-何も特別なようにはみえません。
-これらの属性アクセサは一価のクラスであるか、普通のクラスであるかで、
-することは何も違いません。
-ここでの最重要ポイントは $self がオブジェクトに bless されたリファレンスを
-持たなければならないとは言わないところです。
-単に、メソッドを呼ぶことができれば、何でもいいのです。
-パッケージの名前自身、Cosmos でも、オブジェクトのように働きます。
-&supernova メソッドをみてください。
-これは、クラスメソッドか、オブジェクトメソッドでしょうか？
-その答えは、静的な解析ではその答えを知らせることはできないということです。
-Perlは、気にしませんし、あなたも気にしないべきです。
-3 つの属性メソッドで、C<%$self> は、実際は、%Cosmos パッケージ変数に
-アクセスしています。
+그대로 있어주세요. 
+아무것도 특별한 것처럼 보이지 않습니다.
+이 속성 접근들은 monadic 클래스인가 보통의 클래스인가로 
+하는 것은 아무것도 다르지 않습니다.
+여기에서의 제일 중요한 포인트는 $self 가 오브젝트에 bless 되거나 리퍼런스를
+가지지 않으면 안된다고는 하지 않는 곳입니다. 
+단순히 메소드를 호출하는 것이 가능하면, 어쨌든 좋습니다. 
+패키지의 이름자신, Cosmos 에서도, 오브젝트처럼 움직입니다.
+&supernova 메소드를 봐주세요.
+이것은, 클래스메소드나 오브젝트메소드인가요?
+그 답은 정적인 해석에서는 그 답을 알리는 것은 불가능하다는 것입니다. 
+Perl 은 신경쓰지 않고, 당신도 신경쓰지 말아야 합니다. 
+3개의 속성 메소드에서 C<%$self> 는, 실제는, %Cosmose 패키지 변수에 
+접근하고 있습니다.
 
 =begin original
 
@@ -1315,16 +1313,15 @@ for later method invocations.
 
 =end original
 
-ステファン・ホーキングのように、複数の、連続の、関係のない宇宙の存在を
-仮定するなら、
-&bigbang メソッドを自分で呼び、いつでも、そっくり再び、全てを
-始めることができます。
-&bigbang を、コンストラクタよりも、もっとイニシャライザとして、
-考えているかもしれません。
-&bigbang は、新たのメモリを割り当てません、すなわち、&bingbang は、既に
-そこにあるものを、初期化するだけというために。
-ですが、他のどんなコンストラクタと同じように、後のメソッド呼び出しに
-使うために、スカラ値をを返します。
+스티븐 호킹처럼 복수의, 연속의, 관계없는 우주의 존재를 가정하면,
+&bigbang 메소드를 스스로 호출하고 언제라도 다시 모든 것을 
+시작할 수가 있습니다.
+&bigbang 을 생성자보다도 더욱 이니셜라이저로 
+생각하고 있을지도 모르겠습니다.
+&bigbang 은 새로운 메모리를 할당하지 않습니다. 즉, &bigbang 은, 이미 
+거기에 있는 것을 초기화하는 뿐이기 때문에.
+하지만, 다른 어떤 생성자처럼 뒤의 메소드 호출에 사용하기 위해 
+스칼라 값을 반환합니다.
 
 =begin original
 
